tests/baselines/reference/bestCommonTypeOfTuple2.errors.txt
tests/cases/conformance/types/typeRelationships/bestCommonType/bestCommonTypeOfTuple2.ts(17,14): error TS2339: Property '4' does not exist on type '[C, base]'.
tests/cases/conformance/types/typeRelationships/bestCommonType/bestCommonTypeOfTuple2.ts(18,14): error TS2339: Property '4' does not exist on type '[C, D]'.
tests/cases/conformance/types/typeRelationships/bestCommonType/bestCommonTypeOfTuple2.ts(19,14): error TS2339: Property '4' does not exist on type '[C1, D1]'.
tests/cases/conformance/types/typeRelationships/bestCommonType/bestCommonTypeOfTuple2.ts(20,14): error TS2339: Property '2' does not exist on type '[base1, C1]'.
tests/cases/conformance/types/typeRelationships/bestCommonType/bestCommonTypeOfTuple2.ts(21,14): error TS2339: Property '2' does not exist on type '[C1, F]'.


==== tests/cases/conformance/types/typeRelationships/bestCommonType/bestCommonTypeOfTuple2.ts (5 errors) ====
    interface base { }
    interface base1 { i }
    class C implements base { c }
    class D implements base { d }
    class E implements base { e }
    class F extends C { f }
    
    class C1 implements base1 { i = "foo"; c }
    class D1 extends C1 { i = "bar"; d }
    
    var t1: [C, base];
    var t2: [C, D];
    var t3: [C1, D1];
    var t4: [base1, C1];
    var t5: [C1, F]
    
    var e11 = t1[4]; // base
                 ~
!!! error TS2339: Property '4' does not exist on type '[C, base]'.
    var e21 = t2[4]; // {}
                 ~
!!! error TS2339: Property '4' does not exist on type '[C, D]'.
    var e31 = t3[4]; // C1
                 ~
!!! error TS2339: Property '4' does not exist on type '[C1, D1]'.
    var e41 = t4[2]; // base1
                 ~
!!! error TS2339: Property '2' does not exist on type '[base1, C1]'.
    var e51 = t5[2]; // {}
                 ~
!!! error TS2339: Property '2' does not exist on type '[C1, F]'.
    